--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ I received the 2018 Maurice H. Halstead Memorial Award at Purdue University, in 
 		    </br></br>
 	    
 	    
-		    <h2>Students</h2>
+		    <h2><i class="fa"></i>Students</h2>
 			    <h5 style="line-height: 1.4"> I am extremely fortunate to supervise a group of fantastic students: </h5>
                         <ul>
 				<li><h5 style="line-height: 1.4"> Alan Romano, Ph.D. student </h5></li>
